--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.2.24",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.5",
     "@neondatabase/serverless": "^0.10.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.18.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
