--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.1",
     "@react-navigation/native": "^6.0.2",
-    "@stripe/stripe-react-native": "^0.39.0",
-    "expo": "~51.0.28",
+    "@stripe/stripe-react-native": "^0.37.2",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -36,11 +37,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.18.2",
+    "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
@@ -49,6 +51,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "stripe": "^17.3.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
