--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-google-places-autocomplete": "2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
@@ -52,7 +52,9 @@
     "react-native-web": "~0.19.10",
     "stripe": "^17.3.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-auth-session": "~5.5.2",
+    "expo-random": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
