--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@react-navigation/native": "^6.0.2",
     "@stripe/stripe-react-native": "^0.37.2",
     "expo": "~51.0.38",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
+    "expo-random": "~14.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fix": "^0.0.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -52,9 +55,7 @@
     "react-native-web": "~0.19.10",
     "stripe": "^17.3.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0",
-    "expo-auth-session": "~5.5.2",
-    "expo-random": "~14.0.1"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
