--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.53.1",
     "react-native": "0.76.1",
     "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-maps": "1.18.0",
